# mateus-media

./: .coverage  .readthedocs.yaml  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 01_tutorial.md  index.md
docs/api/: calcular_medias_mensais.md
docs/stylesheet/: extra.css
docs/templates/: cards.html  instalacao.md
mateus_media/: calcular_medias_mensais.py  cli.py  dados_de_média.xlsx
tests/: test_cli.py  testes_media.py
